--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,12 +6,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-		<h1>
-			Welcome to Accio Jobs!
-		</h1>
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>
+		Welcome to Accio Jobs!
+	</h1>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
