--- a/main.html
+++ b/main.html
@@ -3,6 +3,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		h1{
+			color: black;
+			text-align: center;
+		}
+	</style>
 </head>
 
 <body>
@@ -10,6 +16,7 @@
 	<h1>
 		Welcome to Accio Jobs!
 	</h1>
+	
 </body>
 
 </html>
