--- a/main.html
+++ b/main.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="styles.css">
 	<style>
 		h1{
-			color: black;
+			color: #333;
+			font-size: 2em;
 			text-align: center;
 		}
 	</style>
