--- a/main.html
+++ b/main.html
@@ -4,11 +4,11 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		h1{
-			color: #333;
-			font-size: 2em;
-			text-align: center;
-		}
+        h1 {
+            font-size: 3rem;
+            color: #333;
+            text-align: center;
+	    }
 	</style>
 </head>
 
